feat: 增加Go基金投研服务
